[fix]: fix overflow issue

--- a/src/styles/inConstruction.scss
+++ b/src/styles/inConstruction.scss
@@ -6,8 +6,10 @@
   width: 100%;
   height: 100%;
   max-width: 100%;
+  max-height: 100%;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 
   .imageContent,
   .informationContent {
